Add contrast and variables

--- a/css/main.css
+++ b/css/main.css
@@ -546,6 +546,12 @@ a:focus {
 .icon-color6 {
   background-color: #2c3e50;
 }
+.icon-color7 {
+  background-color: #fdbf6f;
+}
+.icon-color8 {
+  background-color: #ff7f00;
+}
 .gap {
   margin-bottom: 50px;
 }
