--- a/css/main.css
+++ b/css/main.css
@@ -177,6 +177,12 @@ a:focus {
 #portfolio .box {
   background: #f3f3f3;
 }
+iframe {
+  display: block;
+  width: 100%;
+  padding: 2%;
+  height: 500px;
+}
 .portfolio-items,
 .portfolio-filter {
   list-style: none;
@@ -308,10 +314,10 @@ a:focus {
   -o-transition: none;
   transition: none;
 }
-#pricing .box {
+#scrum .box {
   background-color: #f9f9f9;
 }
-#pricing .plan {
+#scrum .plan {
   background: #fff;
   list-style: none;
   margin: 0 0 20px;
@@ -319,34 +325,82 @@ a:focus {
   padding: 0;
   border-bottom: 1px solid #e1e1e1;
 }
-#pricing .plan li {
+#scrum .plan li {
   padding: 10px 0;
   margin: 0 15px;
   border-bottom: 1px dashed #eee;
 }
-#pricing .plan li.plan-name {
+#scrum .plan li.plan-name {
   padding: 15px 0;
   font-size: 18px;
   font-weight: 700;
 }
-#pricing .plan li.plan-price {
+#scrum .plan li.plan-price {
   color: #666;
   padding: 15px 0;
   font-size: 48px;
 }
-#pricing .plan li.plan-action {
+#scrum .plan li.plan-action {
   margin-top: 20px;
   margin-bottom: 20px;
   border-bottom: 0;
 }
-#pricing .plan.featured {
+#scrum .plan.featured {
   -webkit-transform: scale(1.05);
   -moz-transform: scale(1.05);
   -ms-transform: scale(1.05);
   -o-transform: scale(1.05);
   transform: scale(1.05);
 }
-#pricing .plan.featured .plan-price {
+#scrum .plan.featured .plan-price {
+  color: #fff;
+  background-color: #52b6ec;
+  border-bottom-color: #52b6ec;
+  margin: 0;
+}
+#canvas .box {
+  background-color: #f9f9f9;
+}
+#canvas iframe {
+  padding: 0%;
+  height: 600px;
+}
+#canvas .plan {
+  background: #fff;
+  list-style: none;
+  margin: 0 0 20px;
+  text-align: center;
+  padding: 0;
+  border-bottom: 1px solid #e1e1e1;
+}
+#canvas .plan li {
+  padding: 10px 0;
+  margin: 0 15px;
+  border-bottom: 1px dashed #eee;
+}
+#canvas .plan li.plan-name {
+  padding: 15px 0;
+  font-size: 18px;
+  font-weight: 700;
+}
+#canvas .plan li.plan-price {
+  color: #666;
+  padding: 15px 0;
+  font-size: 48px;
+}
+#canvas .plan li.plan-action {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  border-bottom: 0;
+}
+#canvas .plan.featured {
+  -webkit-transform: scale(1.05);
+  -moz-transform: scale(1.05);
+  -ms-transform: scale(1.05);
+  -o-transform: scale(1.05);
+  transform: scale(1.05);
+}
+#canvas .plan.featured .plan-price {
   color: #fff;
   background-color: #52b6ec;
   border-bottom-color: #52b6ec;
